# limon-backend

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  TAGGING_BUILD_LOG.md  docker-compose.yml  pyproject.toml
.claude/skills/branch-check/: SKILL.md
.github/workflows/: ci.yml
app/: dependencies.py  main.py
app/core/: auth.py  config.py  logging.py
app/db/: session.py
app/models/: __init__.py  event.py  recording.py  tag.py  user.py
app/routers/: __init__.py  events.py  internal.py  tags.py  uploads.py  users.py
app/schemas/: __init__.py  event.py  pubsub.py  tag.py  tagging.py  transcription.py  upload.py  user.py
app/services/: audio_storage.py  demo_seed.py  events.py  storage.py  supabase_admin.py  tagger.py  tagging.py  tags.py  task_queue.py  transcriber.py  transcription.py  users.py
docs/: GCP_DEPLOYMENT.md  SPEC.md
scripts/: deploy_gcp.ps1  deploy_gcp.sh  provision_trigger.sh  seed_test_event.py  smoke_gcs.py  test_tagging_manual.py  verify_gcs_upload.py
scripts/endpoint/: down  up
scripts/hooks/: install.py  pre-push
scripts/supabase/: README.md  setup.sql
tests/: conftest.py  test_auth.py  test_config.py  test_demo_seed.py  test_events.py  test_recording_model.py  test_storage.py  test_supabase_admin.py  test_tags.py  test_transcriber.py  test_trigger.py  test_uploads.py  test_users.py  test_worker.py
